--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,20 +42,14 @@ dependencies:
   firebase_auth: ^3.3.11
   flutter_secure_storage: ^5.0.2
   velocity_x: ^3.4.0
-  pinput: ^0.2.6
   flutter_swiper: ^1.1.6
-<<<<<<< HEAD
   google_maps_flutter: ^2.1.3
   http: ^0.13.4
   flutter_polyline_points: ^1.0.0
   geolocator: ^8.2.0
   url_launcher: ^6.0.20
-=======
-  http: ^0.13.4
-  flutter_polyline_points: ^1.0.0
-  geolocator: ^8.2.0
-  google_maps_flutter: ^2.1.3
->>>>>>> 7c9a09a52e0e25964ef4e56f77d6e360aa3b2380
+  pinput: ^2.2.7
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
