--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,12 @@ dependencies:
   geolocator: ^8.2.0
   url_launcher: ^6.0.20
   pinput: ^2.2.7
-  fluttertoast: ^8.0.9
+  flutter_native_splash: ^2.1.3+1
+
+flutter_native_splash:
+  color: "#FFFFFF"
+  image: "assets/images/playstore.png"
+
 
 dev_dependencies:
   flutter_test:
