--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   url_launcher: ^6.0.20
   pinput: ^2.2.7
   flutter_native_splash: ^2.1.3+1
+  google_fonts: ^2.3.1
 
 flutter_native_splash:
   color: "#FFFFFF"
