--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   pinput: ^2.2.7
   flutter_native_splash: ^2.1.3+1
   google_fonts: ^2.3.1
+  easy_pdf_viewer: ^1.0.2
 
 flutter_native_splash:
   color: "#FFFFFF"
