--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   flutter_native_splash: ^2.1.3+1
   google_fonts: ^2.3.1
   easy_pdf_viewer: ^1.0.2
+  google_mobile_ads: ^1.2.0
 
 flutter_native_splash:
   color: "#FFFFFF"
