--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   google_fonts: ^2.3.1
   easy_pdf_viewer: ^1.0.2
   google_mobile_ads: ^1.2.0
+  font_awesome_flutter: ^10.1.0
 
 flutter_native_splash:
   color: "#FFFFFF"
