--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.5+5
 
 environment:
   sdk: ">=2.16.2 <3.0.0"
@@ -40,7 +40,6 @@ dependencies:
   firebase_core: ^1.13.1
   otp_text_field: ^1.1.2
   firebase_auth: ^3.3.11
-  flutter_secure_storage: ^5.0.2
   velocity_x: ^3.4.0
   flutter_swiper: ^1.1.6
   google_maps_flutter: ^2.1.3
@@ -54,6 +53,7 @@ dependencies:
   easy_pdf_viewer: ^1.0.2
   google_mobile_ads: ^1.2.0
   font_awesome_flutter: ^10.1.0
+  change_app_package_name: ^1.1.0
 
 flutter_native_splash:
   color: "#FFFFFF"
