--- a/.github/workflows/flutter_test.yaml
+++ b/.github/workflows/flutter_test.yaml
@@ -46,3 +46,4 @@ jobs:
         with:
           name: release-apk
           path: build/app/outputs/apk/release/app-release.apk
+          token: ${{ secrets.TOKEN }}
