--- a/.github/workflows/flutter_test.yaml
+++ b/.github/workflows/flutter_test.yaml
@@ -25,7 +25,11 @@ jobs:
         with:
           channel: "stable" # 'dev', 'alpha', default to: 'stable'
           # flutter-version: '1.12.x' # you can also specify exact version of flutter
-
+      
+      - run: flutter --version
+      
+      - run: flutter clean
+      
       # Get flutter dependencies.
       - run: flutter pub get
 
@@ -39,7 +43,7 @@ jobs:
       # - run: flutter test
 
       # Build apk.
-      - run: flutter build apk --release
+      - run: flutter build apk 
 
       # Upload generated apk to the artifacts.
       - uses: actions/upload-artifact@v1
