--- a/.github/workflows/flutter_test.yaml
+++ b/.github/workflows/flutter_test.yaml
@@ -1,53 +1,26 @@
-name: Flutter CI
-
-# This workflow is triggered on pushes to the repository.
-# token for github : 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
-on:
-  push:
-  pull_request:
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
+on: push
+name: Test, Build and Release apk
 jobs:
   build:
-    # This job will run on ubuntu virtual machine
+    name: Build APK
     runs-on: ubuntu-latest
     steps:
-      # Setup Java environment in order to build the Android app.
-      - uses: actions/checkout@v1
-      - uses: actions/setup-java@v1
-        with:
-          java-version: "12.x"
-
-      # Setup the flutter environment.
-      - uses: subosito/flutter-action@v1
-        with:
-          channel: "stable" # 'dev', 'alpha', default to: 'stable'
-          # flutter-version: '1.12.x' # you can also specify exact version of flutter
-      
-      - run: flutter --version
-      
-      - run: flutter clean
-      
-      # Get flutter dependencies.
-      - run: flutter pub get
-
-      # Check for any formatting issues in the code.
-      # - run: flutter analyze --no-fatal-infos --no-fatal-warnings
-
-      # # Statically analyze the Dart code for any errors.
-      - run: flutter analyze .
-
-      # Run widget tests for our flutter project.
-      # - run: flutter test
-
-      # Build apk.
-      - run: flutter build apk 
-
-      # Upload generated apk to the artifacts.
-      - uses: actions/upload-artifact@v1
-        with:
-          name: release-apk
-          path: build/app/outputs/apk/release/app-release.apk
-          token: ${{ secrets.TOKEN }}
+    - uses: actions/checkout@v1
+    - uses: actions/setup-java@v1
+      with:
+        java-version: '12.x'
+        
+    - uses: subosito/flutter-action@v1
+      with:
+        flutter-version: 'stable'
+    
+    - run: flutter --version
+    - run: flutter pub get
+    - run: flutter test
+    - run: flutter build apk --debug --split-per-abi
+    
+    - name: Create a Release APK
+      uses: ncipollo/release-action@v1
+      with:
+        artifacts: "build/app/outputs/apk/debug/*.apk"
+        token: ${{ secrets.TOKEN }}
