--- a/.github/workflows/flutter_test.yaml
+++ b/.github/workflows/flutter_test.yaml
@@ -12,7 +12,7 @@ jobs:
         
     - uses: subosito/flutter-action@v1
       with:
-        flutter-version: 'stable'
+        channel: 'stable'
     
     - run: flutter --version
     - run: flutter pub get
