--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
 
   google_sign_in: ^5.2.4
   flutter_svg: ^1.0.3
-  firebase_core: ^1.13.1
+  firebase_core: ^1.20.0
   otp_text_field: ^1.1.2
   firebase_auth: ^3.3.11
   velocity_x: ^3.4.0
@@ -54,6 +54,10 @@ dependencies:
   google_mobile_ads: ^1.2.0
   font_awesome_flutter: ^10.1.0
   change_app_package_name: ^1.1.0
+  cloud_firestore: ^3.4.4
+  fluttertoast: ^8.0.9
+  flutter_rating_bar: ^4.0.1
+  intl: ^0.17.0
 
 flutter_native_splash:
   color: "#FFFFFF"
